[package]
name = "tesseract-primitives"
version = "0.1.0"
edition = "2021"
description = "Tesseract relayer primitives"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.53"
futures = "0.3.28"

serde = { version = "1.0.164", features = ["derive"] }
primitive-types = "0.12.1"

ismp = { git = "https://github.com/polytope-labs/ismp-rs", branch = "main" }
parity-scale-codec = "3.2.2"
