[package]
name = "sync-committee-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sync-committee-primitives = { path= "../primitives" }
sync-committee-verifier = { path= "../verifier" }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "ef89b4a4ef97cdd53a66ddb52e554667aca0beb2" }
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "688a82389f60ed68c10404417c1f7f442ba748a1", features=["serde"] }
reqwest = {version="0.11.14", features=["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.81"}
anyhow = "1.0.68"
actix-rt = "*"
tokio = { version =  "1.18.2", features = ["full"]}
tokio-stream = { version = "0.1.8" }
async-stream = { version = "0.3.3"}
base2 = {version="0.2.2", default-features=false}
env_logger = "0.10.0"

[dev-dependencies]
hex = "0.4.3"
sync-committee-primitives = { path= "../primitives", features = ["testing"] }
sync-committee-verifier = { path= "../verifier", features = ["testing"] }


