[package]
name = "sync-committee-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sync-committee-primitives = { path= "../primitives" }
sync-committee-verifier = { path= "../verifier" }
ethereum-consensus = { git = "https://github.com/polytope-labs/ethereum-consensus", rev = "d3fe0ad76613b52cdfbdea7c317ecdc35f271e4f" }
ssz-rs = { git = "https://github.com/polytope-labs/ssz-rs",  rev = "2e28a8800787392045fb3f8f1eaef6c65a8600d7" }
reqwest = {version="0.11.14", features=["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.81"}
anyhow = "1.0.68"
actix-rt = "*"
tokio = { version =  "1.18.2", features = ["full"]}
tokio-stream = { version = "0.1.8" }
async-stream = { version = "0.3.3"}
base2 = {version="0.2.2", default-features=false}
env_logger = "0.10.0"

[dev-dependencies]
hex = "0.4.3"
sync-committee-primitives = { path= "../primitives", features = ["testing"] }
sync-committee-verifier = { path= "../verifier", features = ["testing"] }


