[package]
name = "fisherman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
tesseract = { workspace = true }
clap = { version = "4.3.5", features = ["derive"] }
anyhow = "1.0.71"