[package]
name = "tesseract"
version = "0.2.0"
edition = "2021"
description = "Chain agnostic relayer implementation for ISMP"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
parachain = { package = "tesseract-parachain", path = "../substrate/parachain" }
tesseract-substrate = { path = "../substrate/common" }
consensus = { package = "tesseract-consensus", path = "../consensus" }
primitives = { package = "tesseract-primitives", path = "../primitives" }
messaging = { package = "tesseract-messaging", path = "../messaging" }
fisherman = { package = "tesseract-fisherman", path = "../fisherman" }
tesseract-evm = { path = "../evm/common" }
#tesseract-polygon-pos = { path = "../ethereum/polygon-pos" }
tesseract-bsc-pos = { path = "../evm/bsc-pos" }
tesseract-sync-committee = { path = "../evm/sync-committee" }
tesseract-beefy = { path = "../substrate/beefy/naive" }
transaction-fees = { path = "../fees" }
telemetry-server = { path = "../telemetry" }
tesseract-client = { path = "../client" }

# polytope labs
ismp.workspace = true
pallet-ismp.workspace = true
ismp-sync-committee.workspace = true

# crates.io
log = "0.4.19"
env_logger = "0.10.0"
hex = "0.4.3"

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.71"
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
json = { version = "1.0.112", package = "serde_json" }
toml = "0.7.4"
async-trait = "0.1.77"
clap = { version = "4.3.5", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
ethers = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
rust_socketio = { version = "0.4.4" }
sp-core = { workspace = true, features = ["full_crypto"] }

[features]
consensus = []
sepolia = ["tesseract-sync-committee/sepolia"]
