[package]
edition = "2021"
name = "ismp-runtime-api"
version = "0.1.0"
authors = ["Polytope Labs"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-ismp = { path = "..", default-features = false }
ismp-rs = { package = "ismp", git = "ssh://git@github.com/polytope-labs/ismp-rs.git", branch = "main", default-features = false }
serde = { version = "1.0.136", features = ["derive"], optional = true }

[dependencies.codec]
package = "parity-scale-codec"
version = "3.0.0"
features = ["derive"]
default-features = false

[features]
default = ['std']
std = ['sp-api/std', 'sp-std/std', 'codec/std', "pallet-ismp/std", "ismp-rs/std", "serde"]
