[package]
name = "sync-committee-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-consensus = { git = "https://github.com/polytope-labs/ethereum-consensus", branch="dami/no-std-support" }
light-client-primitives = {path="../light-client-primitives", default-features = false }
#ssz-rs = { git = "https://github.com/polytope-labs/ssz-rs", branch="seun/ssz-merkle-multi-proof-phase-1", features=["serde"] }
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", rev="ea113b48f3ad134603f11c9be9f5fc696d30c259", default-features=false, features=["serde", "std"] }
reqwest = {version="0.11.14", features=["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.81"}
anyhow = "1.0.68"
actix-rt = "*"

