[package]
name = "sync-committee-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
light-client-primitives = {path="../light-client-primitives", default-features = false }
ethereum-consensus = { git = "https://github.com/polytope-labs/ethereum-consensus", branch="dami/no-std-support" }
ssz-rs = { git = "https://github.com/polytope-labs/ssz-rs", branch="dami/seun-multi-proofs", default-features=false, features=["serde", "std"] }
reqwest = {version="0.11.14", features=["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.81"}
anyhow = "1.0.68"
actix-rt = "*"

